# UniversityProjects

./: README.md
Fractals/: CMakeLists.txt  README.md  collect.bat  main.cpp
Fractals/Fluctlight/: Fluctlight.cpp  Fluctlight.hpp
Fractals/Fractals/A/: A.cpp  A.hpp
Fractals/Fractals/B/: B.cpp  B.hpp
Fractals/Fractals/Base/: Fractal.cpp  Fractal.hpp
Fractals/Fractals/C/: C.cpp  C.hpp
Fractals/FrameCounter/: FrameCounter.hpp
Fractals/Hints/: Thumbs.db
Fractals/TexturePrinter/: TexturePrinter.cpp  TexturePrinter.hpp
Fractals/TimeCounter/: TimeCounter.hpp
Fractals/Utilites/: CycleIterator.hpp  Misc.cpp  Misc.hpp
Fractals/Utilites/WindowForTests/: WindowForTests.cpp  WindowForTests.hpp
Lagrangian Mechanics/: Pendulum_3s.sln  README.md
Lagrangian Mechanics/Pendulum_3s/: Form1.h  MyBool.h  Pendulum_3s.vcxproj  Pendulum_3s.vcxproj.filters  PointsStorage.cpp  PointsStorage.h  RealtimeGraphic_Energy.cpp  RealtimeGraphic_Energy.h  RealtimeGraphic_Impulse.cpp  RealtimeGraphic_Impulse.h
Lagrangian Mechanics/Pendulum_3s/Debug/: Pendulum_3s.vcxproj.GenerateResource.Cache
Lagrangian Mechanics/Pendulum_3s/Debug/Pendulum_3s.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Pendulum_3s.lastbuildstate  Pendulum_3s.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  (+1 more)
Lagrangian Mechanics/Pendulum_3s/Release/: Pendulum_3s.vcxproj.GenerateResource.Cache
Lagrangian Mechanics/Release/: Pendulum_3s.exe.metagen
Persons Database/: README.md  main.cpp
Plate Temperature/: README.md  RunAnimation_Plate4.m  main.cpp
(+11 files in other folders)
